--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
     <title>Terms</title>
 </head>
 <body>
-    <h1>Ingredients</h1>
+    <h1>Terms</h1>
     <p>
         CAREFULLY READ AND UNDERSTAND THESE TERMS BEFORE ORDERING ANY PRODUCT THROUGH THIS WEBSITE
 This website is operated by Apex United Pty Ltd, with the registered address PO Box 8627 Gold Coast, MC QLD 9726 Australia.
