--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <title>Privacy</title>
 </head>
 <body>
-    <h1>Ingredients</h1>
+    <h1>Privacy</h1>
     <p>
         Privacy Statement & Terms of Use
 In using this website you are deemed to have read and agreed to the following terms and conditions:
