--- a/shipping.html
+++ b/shipping.html
@@ -7,7 +7,7 @@
     <title>Shipping</title>
 </head>
 <body>
-    <h1>Ingredients</h1>
+    <h1>Shipping</h1>
     <p>
         Shipping Methods
 We offer expedited shipping on all orders. Packages will arrive within 5-8 business days for metro locations, and within 5-12 business days for regional areas. All orders are shipped with insurance and delivery is guaranteed.
